// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDropdown component disables hide button if only one editor open 1`] = `
Array [
  <Blueprint3.MenuItem
    disabled={false}
    icon="eye-off"
    id="main.js"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="Main Process (main.js)"
  />,
  <Blueprint3.MenuItem
    disabled={false}
    icon="eye-off"
    id="renderer.js"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="Renderer Process (renderer.js)"
  />,
  <Blueprint3.MenuItem
    disabled={false}
    icon="eye-open"
    id="index.html"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="HTML (index.html)"
  />,
  <Blueprint3.MenuItem
    disabled={false}
    icon="eye-off"
    id="preload.js"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="Preload (preload.js)"
  />,
  <Blueprint3.MenuItem
    disabled={false}
    icon="eye-off"
    id="styles.css"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="Stylesheet (styles.css)"
  />,
  <React.Fragment>
    <Blueprint3.MenuDivider />
    <Blueprint3.MenuItem
      disabled={false}
      icon="plus"
      multiline={false}
      onClick={[Function]}
      popoverProps={Object {}}
      shouldDismissPopover={true}
      text="Add Custom Editor"
    />
  </React.Fragment>,
  <React.Fragment>
    <Blueprint3.MenuDivider />
    <Blueprint3.MenuItem
      disabled={false}
      icon="grid-view"
      multiline={false}
      popoverProps={Object {}}
      shouldDismissPopover={true}
      text="Reset Layout"
    />
  </React.Fragment>,
]
`;

exports[`EditorDropdown component renders 1`] = `
<Fragment>
  <Blueprint3.Popover
    boundary="scrollParent"
    captureDismiss={false}
    content={
      <Blueprint3.Menu>
        <Blueprint3.MenuItem
          disabled={false}
          icon="eye-off"
          id="main.js"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="Main Process (main.js)"
        />
        <Blueprint3.MenuItem
          disabled={false}
          icon="eye-open"
          id="renderer.js"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="Renderer Process (renderer.js)"
        />
        <Blueprint3.MenuItem
          disabled={false}
          icon="eye-open"
          id="index.html"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="HTML (index.html)"
        />
        <Blueprint3.MenuItem
          disabled={false}
          icon="eye-off"
          id="preload.js"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="Preload (preload.js)"
        />
        <Blueprint3.MenuItem
          disabled={false}
          icon="eye-off"
          id="styles.css"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="Stylesheet (styles.css)"
        />
        <React.Fragment>
          <Blueprint3.MenuDivider />
          <Blueprint3.MenuItem
            disabled={false}
            icon="plus"
            multiline={false}
            onClick={[Function]}
            popoverProps={Object {}}
            shouldDismissPopover={true}
            text="Add Custom Editor"
          />
        </React.Fragment>
        <React.Fragment>
          <Blueprint3.MenuDivider />
          <Blueprint3.MenuItem
            disabled={false}
            icon="grid-view"
            multiline={false}
            popoverProps={Object {}}
            shouldDismissPopover={true}
            text="Reset Layout"
          />
        </React.Fragment>
      </Blueprint3.Menu>
    }
    defaultIsOpen={false}
    disabled={false}
    fill={false}
    hasBackdrop={false}
    hoverCloseDelay={300}
    hoverOpenDelay={150}
    inheritDarkTheme={true}
    interactionKind="click"
    minimal={false}
    modifiers={Object {}}
    openOnTargetFocus={true}
    position="bottom"
    targetTagName="span"
    transitionDuration={300}
    usePortal={true}
    wrapperTagName="span"
  >
    <Blueprint3.Button
      icon="applications"
      text="Editors"
    />
  </Blueprint3.Popover>
</Fragment>
`;
